Bug 475379 - Kate Crash when i right-click in windows
Summary: Kate Crash when i right-click in windows
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-10-08 18:28 UTC by zacharieroy
Modified: 2023-10-08 22:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zacharieroy 2023-10-08 18:28:18 UTC
Application: kate (23.08.1)

Qt Version: 5.15.10
Frameworks Version: 5.110.0
Operating System: Linux 6.5.4-1-default x86_64
Windowing System: X11
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.27.8 [CoredumpBackend]

-- Information about the crash:
After i open a folder in Kate, i have a crash when i right-click in windows,

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

           PID: 665 (kate)
           UID: 1000 (mastarch)
           GID: 1000 (mastarch)
        Signal: 11 (SEGV)
     Timestamp: Sun 2023-10-08 14:21:53 EDT (48s ago)
  Command Line: /usr/bin/kate
    Executable: /usr/bin/kate
 Control Group: /user.slice/user-1000.slice/user@1000.service/app.slice/app-\x2fusr\x2fbin\x2fkate-936a539ebd764a62bd738dca6d7c5daf.scope
          Unit: user@1000.service
     User Unit: app-\x2fusr\x2fbin\x2fkate-936a539ebd764a62bd738dca6d7c5daf.scope
         Slice: user-1000.slice
     Owner UID: 1000 (mastarch)
       Boot ID: 0772040df6354d55a2a8174b3b8d1c6b
    Machine ID: 562c0e25817a4b3da920f6d9210ec96f
      Hostname: suselaptop
       Storage: /var/lib/systemd/coredump/core.kate.1000.0772040df6354d55a2a8174b3b8d1c6b.665.1696789313000000.zst (present)
  Size on Disk: 4.5M
       Message: Process 665 (kate) of user 1000 dumped core.
                
                Stack trace of thread 665:
                #0  0x00007f1424c91dec __pthread_kill_implementation (libc.so.6 + 0x91dec)
                #1  0x00007f1424c3f0c6 raise (libc.so.6 + 0x3f0c6)
                #2  0x00007f1426afe92d _ZN6KCrash19defaultCrashHandlerEi (libKF5Crash.so.5 + 0x792d)
                #3  0x00007f1424c3f190 __restore_rt (libc.so.6 + 0x3f190)
                #4  0x00007f1426d53cb9 n/a (libkateprivate.so.23.08.1 + 0xd4cb9)
                #5  0x00007f1425725812 n/a (libQt5Core.so.5 + 0x325812)
                #6  0x00007f14265cc2a5 _ZN7QWidget26customContextMenuRequestedERK6QPoint (libQt5Widgets.so.5 + 0x1cc2a5)
                #7  0x00007f14265e7a79 _ZN7QWidget5eventEP6QEvent (libQt5Widgets.so.5 + 0x1e7a79)
                #8  0x00007f1426691f7e _ZN6QFrame5eventEP6QEvent (libQt5Widgets.so.5 + 0x291f7e)
                #9  0x00007f14256ed2eb _ZN23QCoreApplicationPrivate29sendThroughObjectEventFiltersEP7QObjectP6QEvent (libQt5Core.so.5 + 0x2ed2eb)
                #10 0x00007f14265a518e _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1a518e)
                #11 0x00007f14265adaaa _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1adaaa)
                #12 0x00007f14256ed568 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x2ed568)
                #13 0x00007f14265fff59 n/a (libQt5Widgets.so.5 + 0x1fff59)
                #14 0x00007f1426602d1f n/a (libQt5Widgets.so.5 + 0x202d1f)
                #15 0x00007f14265a519e _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1a519e)
                #16 0x00007f14256ed568 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x2ed568)
                #17 0x00007f1425b7d0eb _ZN22QGuiApplicationPrivate17processMouseEventEPN29QWindowSystemInterfacePrivate10MouseEventE (libQt5Gui.so.5 + 0x17d0eb)
                #18 0x00007f1425b5036c _ZN22QWindowSystemInterface22sendWindowSystemEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Gui.so.5 + 0x15036c)
                #19 0x00007f141f31b1aa n/a (libQt5XcbQpa.so.5 + 0x6d1aa)
                #20 0x00007f1423113ef0 n/a (libglib-2.0.so.0 + 0x5bef0)
                #21 0x00007f1423115b18 n/a (libglib-2.0.so.0 + 0x5db18)
                #22 0x00007f14231161cc g_main_context_iteration (libglib-2.0.so.0 + 0x5e1cc)
                #23 0x00007f14257464a6 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x3464a6)
                #24 0x00007f14256ebffb _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2ebffb)
                #25 0x00007f14256f4490 _ZN16QCoreApplication4execEv (libQt5Core.so.5 + 0x2f4490)
                #26 0x000055fd84c2f478 n/a (kate + 0xa478)
                #27 0x00007f1424c281b0 __libc_start_call_main (libc.so.6 + 0x281b0)
                #28 0x00007f1424c28279 __libc_start_main@@GLIBC_2.34 (libc.so.6 + 0x28279)
                #29 0x000055fd84c31835 n/a (kate + 0xc835)
                
                Stack trace of thread 670:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f230 pthread_cond_wait@@GLIBC_2.3.2 (libc.so.6 + 0x8f230)
                #2  0x00007f1415ed1fdb n/a (iris_dri.so + 0xd1fdb)
                #3  0x00007f1415f1b8d7 n/a (iris_dri.so + 0x11b8d7)
                #4  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #5  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 669:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f230 pthread_cond_wait@@GLIBC_2.3.2 (libc.so.6 + 0x8f230)
                #2  0x00007f1415ed1fdb n/a (iris_dri.so + 0xd1fdb)
                #3  0x00007f1415f1b8d7 n/a (iris_dri.so + 0x11b8d7)
                #4  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #5  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 673:
                #0  0x00007f1424d14e11 pselect (libc.so.6 + 0x114e11)
                #1  0x00007f1421bbdb37 n/a (libusbmuxd-2.0.so.6 + 0x4b37)
                #2  0x00007f1421bbe7a3 n/a (libusbmuxd-2.0.so.6 + 0x57a3)
                #3  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #4  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 680:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f555 pthread_cond_timedwait@@GLIBC_2.3.2 (libc.so.6 + 0x8f555)
                #2  0x00007f142550980c _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0x10980c)
                #3  0x00007f14255076dc n/a (libQt5Core.so.5 + 0x1076dc)
                #4  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #5  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #6  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 681:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f555 pthread_cond_timedwait@@GLIBC_2.3.2 (libc.so.6 + 0x8f555)
                #2  0x00007f142550980c _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0x10980c)
                #3  0x00007f14255076dc n/a (libQt5Core.so.5 + 0x1076dc)
                #4  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #5  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #6  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 678:
                #0  0x00007f1424d0a316 ppoll (libc.so.6 + 0x10a316)
                #1  0x00007f1425742575 _Z12qt_safe_pollP6pollfdmPK8timespec (libQt5Core.so.5 + 0x342575)
                #2  0x00007f142635c7e3 n/a (libQt5Network.so.5 + 0x1127e3)
                #3  0x00007f142635a612 n/a (libQt5Network.so.5 + 0x110612)
                #4  0x00007f1426348e74 _ZN15QAbstractSocket16waitForReadyReadEi (libQt5Network.so.5 + 0xfee74)
                #5  0x00007f14246e04ea n/a (libKF5KIOCore.so.5 + 0x554ea)
                #6  0x00007f142471144a _ZN3KIO9SlaveBase12dispatchLoopEv (libKF5KIOCore.so.5 + 0x8644a)
                #7  0x00007f142478be13 n/a (libKF5KIOCore.so.5 + 0x100e13)
                #8  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #9  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #10 0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 685:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f555 pthread_cond_timedwait@@GLIBC_2.3.2 (libc.so.6 + 0x8f555)
                #2  0x00007f142550980c _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0x10980c)
                #3  0x00007f14255076dc n/a (libQt5Core.so.5 + 0x1076dc)
                #4  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #5  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #6  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 686:
                #0  0x00007f1424c8c4ee __futex_abstimed_wait_common (libc.so.6 + 0x8c4ee)
                #1  0x00007f1424c8f555 pthread_cond_timedwait@@GLIBC_2.3.2 (libc.so.6 + 0x8f555)
                #2  0x00007f142550980c _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0x10980c)
                #3  0x00007f14255076dc n/a (libQt5Core.so.5 + 0x1076dc)
                #4  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #5  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #6  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                
                Stack trace of thread 667:
                #0  0x00007f1424d09d7f __poll (libc.so.6 + 0x109d7f)
                #1  0x00007f1423115abf n/a (libglib-2.0.so.0 + 0x5dabf)
                #2  0x00007f14231161cc g_main_context_iteration (libglib-2.0.so.0 + 0x5e1cc)
                #3  0x00007f14257464a6 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x3464a6)
                #4  0x00007f14256ebffb _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2ebffb)
                #5  0x00007f1425502dce _ZN7QThread4execEv (libQt5Core.so.5 + 0x102dce)
                #6  0x00007f14261d0517 n/a (libQt5DBus.so.5 + 0x1a517)
                #7  0x00007f1425503ffd n/a (libQt5Core.so.5 + 0x103ffd)
                #8  0x00007f1424c8ff44 start_thread (libc.so.6 + 0x8ff44)
                #9  0x00007f1424d184cc __clone3 (libc.so.6 + 0x1184cc)
                ELF object binary architecture: AMD x86-64


This GDB supports auto-downloading debuginfo from the following URLs:
  <https://debuginfod.opensuse.org/>
Enable debuginfod for this session? (y or [n]) [answered N; input not from terminal]
Debuginfod has been disabled.
To make this setting permanent, add 'set debuginfod enabled off' to .gdbinit.
[New LWP 665]
[New LWP 670]
[New LWP 669]
[New LWP 673]
[New LWP 680]
[New LWP 681]
[New LWP 678]
[New LWP 685]
[New LWP 686]
[New LWP 667]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/usr/bin/kate'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007f1424c91dec in __pthread_kill_implementation () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f14216d5180 (LWP 665))]
[Current thread is 1 (Thread 0x7f14216d5180 (LWP 665))]

Thread 10 (Thread 0x7f141f2ad6c0 (LWP 667)):
#0  0x00007f1424d09d7f in poll () from /lib64/libc.so.6
#1  0x00007f1423115abf in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f14231161cc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f14257464a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007f14256ebffb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007f1425502dce in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007f14261d0517 in ?? () from /lib64/libQt5DBus.so.5
#7  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#8  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#9  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 9 (Thread 0x7f13ee7fc6c0 (LWP 686)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f555 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f142550980c in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007f14255076dc in ?? () from /lib64/libQt5Core.so.5
#4  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#5  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 8 (Thread 0x7f13eeffd6c0 (LWP 685)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f555 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f142550980c in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007f14255076dc in ?? () from /lib64/libQt5Core.so.5
#4  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#5  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 7 (Thread 0x7f13f94af6c0 (LWP 678)):
#0  0x00007f1424d0a316 in ppoll () from /lib64/libc.so.6
#1  0x00007f1425742575 in qt_safe_poll(pollfd*, unsigned long, timespec const*) () from /lib64/libQt5Core.so.5
#2  0x00007f142635c7e3 in ?? () from /lib64/libQt5Network.so.5
#3  0x00007f142635a612 in ?? () from /lib64/libQt5Network.so.5
#4  0x00007f1426348e74 in QAbstractSocket::waitForReadyRead(int) () from /lib64/libQt5Network.so.5
#5  0x00007f14246e04ea in ?? () from /lib64/libKF5KIOCore.so.5
#6  0x00007f142471144a in KIO::SlaveBase::dispatchLoop() () from /lib64/libKF5KIOCore.so.5
#7  0x00007f142478be13 in ?? () from /lib64/libKF5KIOCore.so.5
#8  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#9  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#10 0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 6 (Thread 0x7f13ef7fe6c0 (LWP 681)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f555 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f142550980c in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007f14255076dc in ?? () from /lib64/libQt5Core.so.5
#4  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#5  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 5 (Thread 0x7f13effff6c0 (LWP 680)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f555 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f142550980c in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007f14255076dc in ?? () from /lib64/libQt5Core.so.5
#4  0x00007f1425503ffd in ?? () from /lib64/libQt5Core.so.5
#5  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 4 (Thread 0x7f1415dff6c0 (LWP 673)):
#0  0x00007f1424d14e11 in pselect () from /lib64/libc.so.6
#1  0x00007f1421bbdb37 in ?? () from /lib64/libusbmuxd-2.0.so.6
#2  0x00007f1421bbe7a3 in ?? () from /lib64/libusbmuxd-2.0.so.6
#3  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#4  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 3 (Thread 0x7f141d2f56c0 (LWP 669)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f230 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f1415ed1fdb in ?? () from /usr/lib64/dri/iris_dri.so
#3  0x00007f1415f1b8d7 in ?? () from /usr/lib64/dri/iris_dri.so
#4  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#5  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 2 (Thread 0x7f141caf46c0 (LWP 670)):
#0  0x00007f1424c8c4ee in __futex_abstimed_wait_common () from /lib64/libc.so.6
#1  0x00007f1424c8f230 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f1415ed1fdb in ?? () from /usr/lib64/dri/iris_dri.so
#3  0x00007f1415f1b8d7 in ?? () from /usr/lib64/dri/iris_dri.so
#4  0x00007f1424c8ff44 in start_thread () from /lib64/libc.so.6
#5  0x00007f1424d184cc in clone3 () from /lib64/libc.so.6

Thread 1 (Thread 0x7f14216d5180 (LWP 665)):
[KCrash Handler]
#4  0x00007f1426d53cb9 in ?? () from /lib64/libkateprivate.so.23.08.1
#5  0x00007f1425725812 in ?? () from /lib64/libQt5Core.so.5
#6  0x00007f14265cc2a5 in QWidget::customContextMenuRequested(QPoint const&) () from /lib64/libQt5Widgets.so.5
#7  0x00007f14265e7a79 in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#8  0x00007f1426691f7e in QFrame::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#9  0x00007f14256ed2eb in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#10 0x00007f14265a518e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#11 0x00007f14265adaaa in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#12 0x00007f14256ed568 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#13 0x00007f14265fff59 in ?? () from /lib64/libQt5Widgets.so.5
#14 0x00007f1426602d1f in ?? () from /lib64/libQt5Widgets.so.5
#15 0x00007f14265a519e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#16 0x00007f14256ed568 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#17 0x00007f1425b7d0eb in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#18 0x00007f1425b5036c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#19 0x00007f141f31b1aa in ?? () from /lib64/libQt5XcbQpa.so.5
#20 0x00007f1423113ef0 in ?? () from /lib64/libglib-2.0.so.0
#21 0x00007f1423115b18 in ?? () from /lib64/libglib-2.0.so.0
#22 0x00007f14231161cc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#23 0x00007f14257464a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#24 0x00007f14256ebffb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#25 0x00007f14256f4490 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#26 0x000055fd84c2f478 in ?? ()
#27 0x00007f1424c281b0 in __libc_start_call_main () from /lib64/libc.so.6
#28 0x00007f1424c28279 in __libc_start_main_impl () from /lib64/libc.so.6
#29 0x000055fd84c31835 in ?? ()

Reported using DrKonqi
Comment 1 Christoph Cullmann 2023-10-08 18:54:05 UTC
Where do you exactly click?
Comment 2 Christoph Cullmann 2023-10-08 19:52:10 UTC
Git commit 7a51ea05b9125a408969ddfe083ab3e22558c170 by Christoph Cullmann.
Committed on 08/10/2023 at 21:52.
Pushed by cullmann into branch 'master'.

ensure we don't crash if no item is selected

M  +49   -48   apps/lib/diagnostics/diagnosticview.cpp

https://invent.kde.org/utilities/kate/-/commit/7a51ea05b9125a408969ddfe083ab3e22558c170
Comment 3 Christoph Cullmann 2023-10-08 19:55:29 UTC
Git commit 56302841c969170e102742849c69bdef7d831ce4 by Christoph Cullmann.
Committed on 08/10/2023 at 21:55.
Pushed by cullmann into branch 'release/23.08'.

ensure we don't crash if no item is selected


(cherry picked from commit 7a51ea05b9125a408969ddfe083ab3e22558c170)

M  +49   -48   apps/lib/diagnostics/diagnosticview.cpp

https://invent.kde.org/utilities/kate/-/commit/56302841c969170e102742849c69bdef7d831ce4
Comment 4 Christoph Cullmann 2023-10-08 22:14:36 UTC
Thanks for the report, should now be fixed.