ensure we don't crash if no item is selected

BUG: 475379